--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  get: ^4.7.2
-  intl: ^0.20.2
-  iconsax: ^0.0.8
-  logger: ^2.6.0
-  get_storage: ^2.1.1
-  lottie: ^3.3.1
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.1.1
   connectivity_plus: ^6.1.4
+  cupertino_icons: ^1.0.8
   firebase_storage: ^12.4.7
-  url_launcher: ^6.3.1
+  flutter_cache_manager: ^3.4.1
+  flutter_dotenv: ^5.2.1
+  get: ^4.7.2
+  get_storage: ^2.1.1
+  google_nav_bar: ^5.0.7
+  iconsax: ^0.0.8
+  intl: ^0.20.2
+  logger: ^2.6.0
+  lottie: ^3.3.1
   smooth_page_indicator: ^1.2.1
+  url_launcher: ^6.3.1
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/
     - assets/images/
     - assets/logos/
