--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   url_launcher: ^6.3.1
   webview_flutter: ^4.13.0
+  camera: ^0.11.2
 
 dev_dependencies:
   flutter_test:
