--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.3.1
   webview_flutter: ^4.13.0
   camera: ^0.11.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
