--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   webview_flutter: ^4.13.0
   camera: ^0.11.2
   image_picker: ^1.1.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
